--- a/AngularProject/ECDC/src/app/Add_Data/add-emp-code/add-emp-code.component.html
+++ b/AngularProject/ECDC/src/app/Add_Data/add-emp-code/add-emp-code.component.html
@@ -46,8 +46,8 @@
               </div>
             </td>
             <td colspan="2">
-              <div class="from-group  ">
-                <label for="PositionId" class="form-label">position Name :</label>
+              <div class="from-group">
+                <label for="PositionId" class="form-label">Position:</label>
                 <select name="PositionId" formControlName="PositionId"
                   id="PositionId" class="form-select">
                   <option value="" disabled selected>Choose  position Name</option>
