--- a/AngularProject/ECDC/src/app/Charts_Of_Reports/QHSEDailyCharts/admin-chart-qhsedaily-by-month/admin-chart-qhsedaily-by-month.component.html
+++ b/AngularProject/ECDC/src/app/Charts_Of_Reports/QHSEDailyCharts/admin-chart-qhsedaily-by-month/admin-chart-qhsedaily-by-month.component.html
@@ -68,6 +68,7 @@
                   <th>Safety Alert</th>
                   <th>Monthly Inspection</th>
                   <th>Weekly Inspection</th>
+                  <th>Days Since Last LTI</th>
                   <th>Recordable Accident</th>
                   <th>Non-Recordable Accident</th>
                   <th>Safety Induction</th>
@@ -85,6 +86,7 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[0]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[0]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[0]}}</td>
@@ -101,6 +103,8 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[1]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[1]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[1]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[1]}}</td>
+
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[1]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[1]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[1]}}</td>
@@ -116,6 +120,8 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[2]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[2]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[2]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[2]}}</td>
+
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[2]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[2]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[2]}}</td>
@@ -131,6 +137,7 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[3]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[3]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[3]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[3]}}</td>
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[3]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[3]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[3]}}</td>
@@ -146,6 +153,7 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[4]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[4]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[4]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[4]}}</td>
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[4]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[4]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[4]}}</td>
@@ -161,6 +169,7 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[5]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[5]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[5]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[5]}}</td>
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[5]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[5]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[5]}}</td>
@@ -176,6 +185,8 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[6]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[6]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[6]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[6]}}</td>
+
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[6]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[6]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[6]}}</td>
@@ -191,6 +202,7 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[7]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[7]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[7]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[7]}}</td>
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[7]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[7]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[7]}}</td>
@@ -206,6 +218,7 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[8]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[8]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[8]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[8]}}</td>
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[8]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[8]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[8]}}</td>
@@ -221,6 +234,7 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[9]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[9]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[9]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[9]}}</td>
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[9]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[9]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[9]}}</td>
@@ -236,6 +250,7 @@
                   <td>{{QHSEDailyRecord.totalPTWListMonth1[10]}}</td>
                   <td>{{QHSEDailyRecord.leadershipVisitsListMonth1[10]}}</td>
                   <td>{{QHSEDailyRecord.quizCrewNumberListMonth1[10]}}</td>
+                  <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth1[10]}}</td>
                   <td>{{QHSEDailyRecord.monthlyInspectionListMonth1[10]}}</td>
                   <td>{{QHSEDailyRecord.weeklyInspectionListMonth1[10]}}</td>
                   <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth1[10]}}</td>
@@ -254,6 +269,7 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[0]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[0]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[0]}}</td>
@@ -270,6 +286,7 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[1]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[1]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[1]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[1]}}</td>
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[1]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[1]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[1]}}</td>
@@ -285,6 +302,8 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[2]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[2]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[2]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[2]}}</td>
+
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[2]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[2]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[2]}}</td>
@@ -300,6 +319,8 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[3]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[3]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[3]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[3]}}</td>
+
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[3]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[3]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[3]}}</td>
@@ -315,6 +336,8 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[4]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[4]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[4]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[4]}}</td>
+
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[4]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[4]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[4]}}</td>
@@ -330,6 +353,8 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[5]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[5]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[5]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[5]}}</td>
+
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[5]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[5]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[5]}}</td>
@@ -345,6 +370,8 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[6]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[6]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[6]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[6]}}</td>
+
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[6]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[6]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[6]}}</td>
@@ -360,6 +387,8 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[7]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[7]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[7]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[7]}}</td>
+
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[7]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[7]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[7]}}</td>
@@ -375,6 +404,8 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[8]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[8]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[8]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[8]}}</td>
+
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[8]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[8]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[8]}}</td>
@@ -390,6 +421,8 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[9]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[9]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[9]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[9]}}</td>
+
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[9]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[9]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[9]}}</td>
@@ -405,6 +438,7 @@
                     <td>{{QHSEDailyRecord.totalPTWListMonth2[10]}}</td>
                     <td>{{QHSEDailyRecord.leadershipVisitsListMonth2[10]}}</td>
                     <td>{{QHSEDailyRecord.quizCrewNumberListMonth2[10]}}</td>
+                    <td>{{QHSEDailyRecord.safetyAlertCrewNumberListMonth2[10]}}</td>
                     <td>{{QHSEDailyRecord.monthlyInspectionListMonth2[10]}}</td>
                     <td>{{QHSEDailyRecord.weeklyInspectionListMonth2[10]}}</td>
                     <td>{{QHSEDailyRecord.daysSinceLastLTIListMonth2[10]}}</td>
@@ -456,6 +490,10 @@
       <div class="mb-5" id="chart9">
         <p class="display-6 text-center">QHSE Statics Compare With All Rigs By Weekly Inspection</p>
         <canvas id="myChart9"></canvas>
+      </div>
+      <div class="mb-5" id="chart13">
+        <p class="display-6 text-center">QHSE Statics Compare With All Rigs By Days Since Last LTI</p>
+        <canvas id="myChart13"></canvas>
       </div>
       <div class="mb-5" id="chart10">
         <p class="display-6 text-center">QHSE Statics Compare With All Rigs By Recordable Accident</p>
