--- a/AngularProject/ECDC/src/app/Charts_Of_Reports/QHSEDailyCharts/admin-chart-qhsedaily-by-year/admin-chart-qhsedaily-by-year.component.html
+++ b/AngularProject/ECDC/src/app/Charts_Of_Reports/QHSEDailyCharts/admin-chart-qhsedaily-by-year/admin-chart-qhsedaily-by-year.component.html
@@ -29,6 +29,7 @@
                 <th>Safety Alert</th>
                 <th>Monthly Inspection</th>
                 <th>Weekly Inspection</th>
+                <th>Days Since Last LTI</th>
                 <th>Recordable Accident</th>
                 <th>Non-Recordable Accident</th>
                 <th>Safety Induction</th>
@@ -44,6 +45,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[0]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[0]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[0]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[0]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[0]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[0]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[0]}}</td>
@@ -60,6 +62,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[1]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[1]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[1]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[1]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[1]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[1]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[1]}}</td>
@@ -75,6 +78,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[2]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[2]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[2]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[2]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[2]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[2]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[2]}}</td>
@@ -90,6 +94,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[3]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[3]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[3]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[3]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[3]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[3]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[3]}}</td>
@@ -105,6 +110,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[4]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[4]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[4]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[4]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[4]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[4]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[4]}}</td>
@@ -120,6 +126,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[5]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[5]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[5]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[5]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[5]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[5]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[5]}}</td>
@@ -135,6 +142,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[6]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[6]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[6]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[6]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[6]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[6]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[6]}}</td>
@@ -150,6 +158,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[7]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[7]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[7]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[7]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[7]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[7]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[7]}}</td>
@@ -165,6 +174,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[8]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[8]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[8]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[8]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[8]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[8]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[8]}}</td>
@@ -180,6 +190,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[9]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[9]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[9]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[9]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[9]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[9]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[9]}}</td>
@@ -195,6 +206,7 @@
                 <td>{{QHSEDailyRecord.totalPTWList[10]}}</td>
                 <td>{{QHSEDailyRecord.leadershipVisitsList[10]}}</td>
                 <td>{{QHSEDailyRecord.quizCrewNumberList[10]}}</td>
+                <td>{{QHSEDailyRecord.safetyAlertCrewNumberList[10]}}</td>
                 <td>{{QHSEDailyRecord.monthlyInspectionList[10]}}</td>
                 <td>{{QHSEDailyRecord.weeklyInspectionList[10]}}</td>
                 <td>{{QHSEDailyRecord.daysSinceLastLTIList[10]}}</td>
@@ -251,6 +263,10 @@
       <div class="mb-5" id="chart9">
         <p class="display-6 text-center">QHSE Statics Compare With All Rigs By Weekly Inspection</p>
         <canvas id="myChart9"></canvas>
+      </div>
+      <div class="mb-5" id="chart13">
+        <p class="display-6 text-center">QHSE Statics Compare With All Rigs By Days Since Last LTI</p>
+        <canvas id="myChart13"></canvas>
       </div>
       <div class="mb-5" id="chart10">
         <p class="display-6 text-center">QHSE Statics Compare With All Rigs By Recordable Accident</p>
