--- a/AngularProject/ECDC/src/app/EditReports/edit-emp-code/edit-emp-code.component.html
+++ b/AngularProject/ECDC/src/app/EditReports/edit-emp-code/edit-emp-code.component.html
@@ -49,7 +49,7 @@
             </td>
             <td colspan="2">
               <div class="from-group  ">
-                <label for="PositionId" class="form-label">position Name :</label>
+                <label for="PositionId" class="form-label">Position:</label>
                 <select name="PositionId" formControlName="PositionId"
                   id="PositionId" class="form-select" [(ngModel)]="EmpCode.positionId">
                   <option value="" disabled selected>Choose  position Name</option>
