--- a/AngularProject/ECDC/src/app/Other_Components/sidebar/sidebar.component.html
+++ b/AngularProject/ECDC/src/app/Other_Components/sidebar/sidebar.component.html
@@ -302,7 +302,7 @@
         </li>
         <li *ngIf="IsUser || IsAdmin">
           <a routerLink="/QHSEDaily">
-            <i class="bi bi-circle"></i><span>QHSE Daily</span>
+            <i class="bi bi-circle"></i><span>QHSE Daily Report</span>
           </a>
         </li>
       </ul>
