--- a/AngularProject/ECDC/src/app/Print_Reports/print-employee-competency-evaluation/print-employee-competency-evaluation.component.html
+++ b/AngularProject/ECDC/src/app/Print_Reports/print-employee-competency-evaluation/print-employee-competency-evaluation.component.html
@@ -42,7 +42,7 @@
                           <div class="mb-1">
                             <h6 class="mb-1">
                               <span style="font-weight: bold;">Rig Number :</span>
-                              <span>Rig - {{ record.rigId }}</span>
+                              <span>Rig - {{ record.rig }}</span>
                             </h6>
                           </div>
                         </td>
