--- a/AngularProject/ECDC/src/app/Print_Reports/print-employee-competency-evaluationt-by-id/print-employee-competency-evaluationt-by-id.component.html
+++ b/AngularProject/ECDC/src/app/Print_Reports/print-employee-competency-evaluationt-by-id/print-employee-competency-evaluationt-by-id.component.html
@@ -37,7 +37,7 @@
                           <div class="mb-1">
                             <h6 class="mb-1">
                               <span style="font-weight: bold;">Rig Number :</span>
-                              <span>Rig - {{ EmployeeCompetencyEvaluationRecord.rigId }}</span>
+                              <span>Rig - {{ EmployeeCompetencyEvaluationRecord.rig }}</span>
                             </h6>
                           </div>
                         </td>
